--- a/index-v01.html
+++ b/index-v01.html
@@ -1,5 +1,5 @@
-﻿<!--  Add some general comments -->
-<!--  date, author and changes are good here -->
+<!--  6 by 6 Binary Puzzel Game -->
+<!--  01/04/2020 Bank Yantaraka -->
 <!DOCTYPE html>
 <html>
 <head>
