--- a/index-v08.html
+++ b/index-v08.html
@@ -4,15 +4,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Binary Puzzle 6x6</title>
-        <style type="text/css"> /* CSS in the same file initially because it's minimal */
-        /* 30/7/19 Rain Holloway - to eliminate double lines */
-        * {
-            padding: 0;
-            border-collapse: collapse;
+    <title>V08 Binary Puzzle 6x6</title>
+     <style type="text/css">
+         body {
+            background-color: lightyellow;
         }
-        /* 27/7/19 Nev - for formatting of the table cells */
-        .gameboard {
+         /* 30/7/19 Rain Holloway - to eliminate double line */
+         * {
+             padding: 0;
+             border-collapse: collapse;
+         }
+
+         /* 27/7/19 Nev - for formatting of the table cells */
+        .gameboard, td, th {
             width: 40px;
             height: 40px;
             font-size: 30px;
@@ -25,15 +29,27 @@
         }
     </style>
     <script type='text/javascript'>  
-        // sample test arrays. G1 is given in the question. G4 is for testing: 
-        var G1 = [1, null, 0, null, 0, 0, null, 1, null, 0, 0, null, null, null, null, null, null, 0, 0, null, null, 1, null, null, 1, 0, null, 1, 1, null, null, 0, null, null, 1, 1];
-        var G2 = [null, 1, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null];
-        var G3 = [null, null, 1, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null];
-        var G4 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36];
-        //  24/7/19 - 6x6 table of text boxes with some initial test values
+        // sample test arrays. G1 is given in the question. GT is for testing - all arrays in EXCEL spreadsheet: 
+        //https://schoolsnsw.sharepoint.com/sites/SDD/Notes_SDD/CodeSamples/32-SampleGames-1pg-AsInV8code.xlsx
+        // because this is laborious to write, you can copy it from the OneNote page:
+        var G01 = [1, null, 0, null, 0, 0, null, 1, null, 0, 0, null, null, null, null, null, null, 0, 0, null, null, 1, null, null, 1, 0, null, 1, 1, null, null, 0, null, null, 1, 1];
+        var G02 = [null, null, null, null, null, null, null, 1, null, null, null, 1, null, 1, null, 1, null, null, null, null, 0, null, null, 1, null, 1, null, null, null, null, null, null, null, 0, 0, null];
+        var G03 = [null, 1, null, null, null, null, null, null, null, 0, null, 0, null, 0, null, 0, null, null, 1, null, null, null, 1, null, null, null, null, null, 0, null, 0, null, null, null, null, null];
+        var G04 = [0, null, null, 1, null, null, null, 0, null, null, null, 1, null, null, 1, 1, null, null, null, null, null, null, 1, 1, null, null, null, null, null, 0, 0, null, 1, null, 1, null];
+        var G05 = [null, null, null, null, null, null, null, 1, null, 1, null, 1, null, null, 0, 0, null, null, 0, null, null, null, null, null, null, null, null, null, 1, 1, null, null, 0, null, 0, null];
+        var G06 = [null, null, null, null, null, 0, null, 1, null, null, 1, null, null, null, null, 0, null, null, null, null, 1, null, null, null, null, null, 1, null, null, null, null, 0, null, null, 1, null];
+        var G07 = [1, null, 1, null, null, 1, null, null, null, 1, null, null, 0, null, null, 1, 0, null, null, null, 1, null, null, null, null, 1, null, null, null, null, 1, null, null, 1, 1, null];
+        var G08 = [1, 1, null, null, null, null, 1, null, null, 1, null, null, null, null, null, null, 0, null, 0, null, 0, null, null, null, null, null, null, null, null, null, null, null, 0, null, 0, null];
+        var G09 = [null, null, 0, 0, null, 0, null, null, null, null, null, null, null, 1, 1, null, null, null, null, null, null, null, 0, 0, null, null, 1, null, 0, null, null, null, null, null, null, null];
+        var G10 = [null, null, null, null, null, null, null, 1, null, null, null, null, null, null, 0, null, 1, 1, null, null, 0, null, null, null, null, 0, null, null, 1, null, null, null, null, null, null, null];
+        var G11 = [null, 1, null, 1, null, 1, null, null, null, null, null, null, 0, 0, null, null, null, null, null, null, null, null, 1, null, 0, null, 1, 0, null, null, null, 1, null, null, null, null];
+        var G12 = [0, null, null, null, null, null, null, 1, 1, null, null, null, null, null, 1, null, null, null, null, null, null, 0, null, null, 0, null, null, 1, null, null, null, null, null, null, null, null];
+        var G13 = [null, null, null, 1, null, null, null, null, null, null, null, 0, null, null, null, null, 0, 0, null, null, null, null, 1, null, 1, null, null, null, null, null, null, 0, null, 0, null, 0];
+        var GT = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36];
+        // 24/7/19 - 6x6 table of text boxes with some initial test values 
         function LoadGrid(G) {
-            var Row = 6;    //set the number of rows
-            var Col = 6;    //set the number of columns
+            var Row = 6;    // set the board size
+            var Col = 6; 
             var GridCol = [];
             var Grid = [];
 
@@ -47,21 +63,65 @@
             document.getElementById('arrayView2D').value = Grid;
             document.getElementById('arrayViewCell').value = Grid[4][3]; //Row 5, Column 4
 
-            for (let j = 0; j < Row; j++) { //Row loop - like the "y" coordinates
+
+            for (let j = 0; j < Row; j++) { //Row loop - like the "y" coordinates 
                 for (let i = 0; i < Col; i++) { //Column loop - like the "x" coordinates
-                    document.getElementById('B' + (i + 1) + (j + 1)).value = G[j * Col + i]; // Nested loops
+                    document.getElementById('B' + (i + 1) + (j + 1)).value = G[j * Col + i]; //Nested loops
                 }
             }
         }
-    </script>
+        function BinaryPuzzleSolver() {
+            window.alert('BinaryPuzzleSolver has not been coded yet');
+        }
+        function SolvePuzzle() {
+            window.alert('SolvePuzzle has not been coded yet');
+        }
+        function SolveNumberPairs() {
+            window.alert('SolveNumberPairs has not been coded yet');
+        }
+        function SolveNumberTrios() {
+            window.alert('SolveNumberTrios has not been coded yet');
+        }
+        function CompleteRowsCols() {
+            window.alert('CompleteRowsCols has not been coded yet');
+        }
+   </script>   
 </head>
-<body onload="LoadGrid(G4)">
-    <!--Parameter for initial load can be changed manually-->
+<body onload="LoadGrid(G01)">
+     <!--Parameter for initial load can be changed manually-->
     <!--3/8/19 "LoadGrid()" now changed to 2 nested loops -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
-        <h2>V7: Creation of a 2 dimensional array for easier row &amp; column reference.</h2>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
+        <h2>V8: Load 13 grids and add buttons for testing.</h2>
+        <h3>This is a good place to start the exam question.</h3>
         <p>Return to <a href="index.html">home</a>:</p>
+        LOAD a grid:
+         <select id="cboPuzNo" onchange="LoadGrid(eval(value))">
+             <!--<select id="cboPuzNo">-->
+            <option value="G01">Example in Q</option>
+            <option value="G02">Game 2</option>
+            <option value="G03">Game 3</option>
+            <option value="G04">Game 4</option>
+            <option value="G05">Game 5</option>
+            <option value="G06">Game 6</option>
+            <option value="G07">Game 7</option>
+            <option value="G08">Game 8</option>
+            <option value="G09">Game 9</option>
+            <option value="G10">Game 10</option>
+            <option value="G11">Game 11</option>
+            <option value="G12">Game 12</option>
+            <option value="G13">Game 13</option>
+            <option value="GT">Test 1-36</option>
+        </select>
+        <!--<input type="button" value="Load" onclick="LoadGrid(GT)" />&nbsp;&nbsp;-->
+        <br />
+        <input type="button" value="--- Solve repeat ---" onclick="BinaryPuzzleSolver()" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+        <input type="button" value="--- Solve once ---" onclick="SolvePuzzle()" />&nbsp;&nbsp;<br />
+        <input type="button" value="Pairs" onclick="SolveNumberPairs()" />&nbsp;
+        <input type="button" value="RowPairs" onclick="SolveRowPairs()" />&nbsp;
+        <input type="button" value="ColPairs" onclick="SolveColPairs()" />&nbsp;
+        <input type="button" value="Trios" onclick="SolveNumberTrios()" />&nbsp;
+        <input type="button" value="Complete" onclick="CompleteRowsCols()" /><br />
         <!--  3/8/19 Board cell labels have "B" for board, then column digit, then row digit"  -->
         <table class="gameboard">
             <tr>
@@ -150,14 +210,11 @@
             </tr>
         </table>
         <br />
-        View of the 2D array:<br />
+          View of the 2D array:<br />
         <textarea id="arrayView2D" cols="30" rows="5"></textarea><br />
         <br />
         View of 1 element:<br />
         <textarea id="arrayViewCell" cols="30" rows="2"></textarea>
-        <br />
-        <br />
-        <br />
     </form>
 </body>
 </html>
